# paxplot

./: .buildinfo  .gitignore  CITATION.cff  CNAME  README.md  advanced_usage.html  api.html  environment.yml  examples.html  files.txt  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  release.html  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml
.github/workflows/: conda.yml  development.yml  package_testing.yml  publish_testing.yml  sphinx.yml  version_testing.yml
_sources/: advanced_usage.rst.txt  api.rst.txt  getting_started.rst.txt  release.rst.txt
_static/: documentation_options.js
docs/: index.md  requirements.txt
docs/source/: advanced_usage.rst  api.rst  conf.py  examples.rst  getting_started.rst  index.rst  pandas_usage.rst  release.rst
docs/source/_templates/: layout.html  layouts.html
examples/: advanced_line_kwargs.py  advanced_usage.py  basic_usage.py  categorical.py  highlight.py  line_kwargs.py  multi_call.py  pandas_usage.py
examples/data/: model_evaluation.csv
src/: core.py  core_testing.py
src/paxplot/: __init__.py  controller.py  core.py  core_testing.py  datasets.py  plot_model.py  test_core.py  test_datasets.py
testing/: test_array_normalizer.py  test_categorical_normalized_array.py  test_core.py  test_datasets.py  test_matplotlib_renderer.py  test_named_normalized_matrix_view.py  test_normalized_matrix.py  test_numeric_normalized_array.py  test_plot_model.py
testing/data_managers/: test_categorical_normalized_array.py  test_named_normalized_matrix_view.py  test_normalized.py  test_normalized_manager.py  test_normalized_matrix.py  test_normalizer.py  test_numeric_normalized_array.py  test_validator.py
testing/plot_component_managers/: test_axis_tick_manager_coordinator.py  test_categorical_axis_tick_manager.py  test_categorical_ticks.py  test_numeric_axis_tick_manager.py  test_numeric_ticks.py  test_tick_collection.py
(+18 files in other folders)
