[metadata]
name = paxplot
version = 0.0.1
author = Jacob Kravits
author_email = kravitsjacob@gmail.com
description = Create static parallel axis plots in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kravitsjacob/paxplot
project_urls =
    Bug Tracker = https://github.com/kravitsjacob/paxplot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src